// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments renders with amount 1`] = `
<div>
  <Comments
    amount={12345}
  />
  <AddComment />
  <Comment />
  <Comment />
  <Comment />
  <Comment />
</div>
`;

exports[`Comments renders without props 1`] = `
<div>
  <Comments />
  <AddComment />
  <Comment />
  <Comment />
  <Comment />
  <Comment />
</div>
`;
